# NetGuard_Pro

./: .env.example  .fletignore  .gitignore  AGENT_FEATURES_SUMMARY.md  AGENT_SYSTEM_PLAN.md  AI_INTERNAL_REFERENCE.md  CURRENT_WORKFLOW_ANALYSIS.md  DETAILED_IMPLEMENTATION_STEPS.md  DEVELOPMENT_PLAN_MOBILE.md  DEVELOPMENT_PLAN_V3.md.md  EXECUTION_BLUEPRINT.md  EXPERT_REPORT_P1.md  EXPERT_REPORT_P2.md  GITHUB_ACTIVITY.md  IMPLEMENTATION_PLAN.md  LUCI_MOBILE_INSIGHTS.md  NETGUARD_PRO_STRICT_PLAN.md  NetGuard_Pro_Requirements.txt  README.md  REFERENCE_OPENWRT_INTEGRATION.md  SECURITY.md  SECURITY_BUILD_PLAN.md  SECURITY_REPORT.md  STABILIZATION_PLAN.md  TECHNICAL_REFERENCE.md  capacitor.config.json  capacitor.config.ts  generate_build_report.sh  index.html  main.py  manifest.json  metadata.json  netguard_pro_flet.py  package-lock.json  package.json  pubspec.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  server.js  (+4 more)
OpenWrtManager-1.40/: README.md  REFERENCE_OPENWRT_INTEGRATION.md  pubspec.yaml
archive/: DEEP_VALIDATION_REPORT.md  EXECUTION_BLUEPRINT_FINAL.md  EXECUTION_BLUEPRINT_V2.md  FINAL_APPROVAL_REPORT.md  OPENWRT_MANAGER_INSIGHTS.md  PROJECT_MASTER_PLAN_V3.md  STABILIZATION_REPORT.md
backend/: __init__.py  requirements.txt
build_logs/: README.md
core/: constants.py  database.py  engine.py  translations.py
docs/: SECURITY.md
electron/: main.cjs  preload.ts
frontend/: index.html  postcss.config.js  tailwind.config.js  vite.config.ts
lib/: main.dart
mobile/: DEVELOPMENT_PLAN.md  pubspec.yaml
scripts/: auto-fix.js  update_activity.sh
(+349 files in other folders)
