[tool.pointer]
name = "netguard-pro-engine"
version = "1.0.0"
description = "Core Network Security Engine for NetGuard Pro"
authors = ["Admin <admin@netguard.pro>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
scapy = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
