[tool.pointer]
name = "netguard-pro-engine"
version = "1.0.0"
description = "Core Network Security Engine for NetGuard Pro"
authors = ["Admin <admin@netguard.pro>"]

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "0.112.2"
uvicorn = "0.30.6"
requests = "2.32.3"
psutil = "6.1.1"
python-multipart = "0.0.26"
pycryptodome = "3.21.0"
cryptography = "44.0.0"
aiohttp = "3.11.11"
certifi = "2024.12.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
